# Panda

./: .clang-format  .clang-tidy  .cmake-format.yaml  .cmake-format.yml  .gitignore  .gitmodules  CMakeLists.txt  Options.cmake  README.md  meson.build
.github/workflows/: build.yml  clang-format.yml  cmake.yml  static-analysis.yml
app/: App.cpp  App.h  CMakeLists.txt  Common.h  GlfwWindow.cpp  GlfwWindow.h  main.cpp
app/backend/: Profiler.h
app/backend/linux/: Profiler.cpp  Profiler.h
app/backend/other/: Profiler.cpp  Profiler.h
app/backend/unix/: Profiler.cpp  Profiler.h
app/backend/windows/: Profiler.cpp  Profiler.h
app/config/: CMakeLists.txt  config.h.in
app/gui/: DevGui.cpp  DevGui.h  GuiManager.cpp  GuiManager.h  UserGui.cpp  UserGui.h
app/inputHandlers/: KeyboardHandler.cpp  KeyboardHandler.h  MouseHandler.cpp  MouseHandler.h
app/movementHandlers/: MovementHandler.cpp  MovementHandler.h  RotationHandler.cpp  RotationHandler.h
app/res/models/: formula_1.mtl  road.mtl
app/utils/: Signals.h  Utils.cpp  Utils.h
app/utils/format/app/inputHandlers/: KeyboardHandlerStateFormatter.h  MouseHandlerButtonStateFormatter.h
cmake/: CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Environment.cmake  Hardening.cmake  InterproceduralOptimization.cmake  Linker.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Utils.cmake  _FORTIFY_SOURCE.hpp
engine/: CMakeLists.txt
engine/config/: CMakeLists.txt  config.h.in
engine/include/panda/: Common.h  Logger.h  Window.h
engine/include/panda/gfx/: Camera.h  Light.h
engine/include/panda/gfx/vulkan/: Alignment.h  Buffer.h  CommandBuffer.h  Context.h  Descriptor.h  Device.h  FrameInfo.h  Mesh.h  Object.h  Pipeline.h  Renderer.h  Scene.h  Shader.h  SwapChain.h  UboLight.h  Vertex.h
engine/include/panda/gfx/vulkan/object/: Mesh.h  Object.h  Surface.h  Texture.h
engine/include/panda/gfx/vulkan/systems/: InstancedRenderSystem.h  LightSystem.h  PointLightSystem.h  RenderSystem.h
engine/include/panda/utils/: Assert.h  Concepts.h  Signal.h  Signals.h  Utils.h
engine/include/panda/utils/format/gfx/api/vulkan/: ResultFormatter.h
engine/shader/: CMakeLists.txt
engine/shader/fs/: basic.frag  lightUtils.glsl  pointLight.frag
engine/shader/vs/: basic.vert  instanced.vert  pointLight.vert  utils.glsl
engine/src/: Logger.cpp
engine/src/gfx/: Camera.cpp
engine/src/gfx/vulkan/: Buffer.cpp  CommandBuffer.cpp  Context.cpp  Descriptor.cpp  Device.cpp  Mesh.cpp  Object.cpp  Pipeline.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  SwapChain.cpp
engine/src/gfx/vulkan/object/: Mesh.cpp  Object.cpp  Surface.cpp  Texture.cpp
engine/src/gfx/vulkan/systems/: InstancedRenderSystem.cpp  LightSystem.cpp  PointLightSystem.cpp  PointLightSystem.h  RenderSystem.cpp  RenderSystem.h
ext/: .clang-tidy
ext/imgui-cmake/: CMakeLists.txt
ext/implot-cmake/: CMakeLists.txt
ext/stb-cmake/: CMakeLists.txt  stb_image.h
src/: CMakeLists.txt  main.cpp  meson.build  pch.h
src/app/: App.cpp  App.h  Logger.cpp  Logger.h  ValidationLayersHandler.cpp  ValidationLayersHandler.h  Window.cpp  Window.h
src/app/inputHandlers/: KeyboardHandler.cpp  KeyboardHandler.h  MouseHandler.cpp  MouseHandler.h
src/app/movementHandlers/: MovementHandler.cpp  MovementHandler.h  RotationHandler.cpp  RotationHandler.h
src/config/: CMakeLists.txt  config.h.in
src/gfx/: Camera.cpp  Camera.h  DirectionalLight.h  Light.h
src/gfx/api/: Api.h  RenderingApi.h
src/gfx/api/vulkan/: Alignment.h  Buffer.cpp  Buffer.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  FrameInfo.h  Model.cpp  Model.h  Object.cpp  Object.h  Pipeline.cpp  Pipeline.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  UboLight.h  ValidationLayersHandler.cpp  ValidationLayersHandler.h  Vertex.h  Vulkan.cpp  Vulkan.h
src/gfx/api/vulkan/systems/: PointLightSystem.cpp  PointLightSystem.h  RenderSystem.cpp  RenderSystem.h
src/shader/: CMakeLists.txt
src/shader/fs/: basic.frag  pointLight.frag  triangle.frag
src/shader/vs/: basic.vert  pointLight.vert  triangle.vert
src/utils/: Assert.h  Signal.h  Signals.h  Utils.h
src/utils/format/api/vulkan/: ResultFormatter.h
src/utils/format/app/inputHandlers/: KeyboardHandlerStateFormatter.h  MouseHandlerButtonStateFormatter.h
